[gd_scene load_steps=9 format=3 uid="uid://c62whoib4he8f"]

[ext_resource type="PackedScene" uid="uid://dklaxvd7swq26" path="res://Characters/Character.tscn" id="1_rubn6"]
[ext_resource type="Script" path="res://Characters/Bakery/baker.gd" id="2_tddji"]
[ext_resource type="Script" path="res://Characters/Resources/character_data.gd" id="3_xjbgb"]
[ext_resource type="Script" path="res://Characters/Bakery/frosting_gun.gd" id="4_lmnxi"]

[sub_resource type="Resource" id="Resource_cmdfg"]
resource_local_to_scene = true
script = ExtResource("3_xjbgb")
Team = "Bakery"
max_health = 125
single_fire = false
base_damage = 15
special_damage = 0
projectile_damage = 1
projectile_speed = 0.0
max_ammo = 5
move_speed = 6.0
acceleration = 0.1
gravity = 30.0
dodge_force = 15.0
punch_force = 8.0

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_xn1ov"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lckb1"]
emission_shape = 3
emission_box_extents = Vector3(0.1, 0.1, 0.1)
direction = Vector3(0, 0, -1)
spread = 0.99
gravity = Vector3(0, -4.5, 0)
initial_velocity_min = 21.15
initial_velocity_max = 21.15
color = Color(0, 0.541176, 0.87451, 1)
hue_variation_max = 0.68
attractor_interaction_enabled = false
collision_mode = 1
collision_friction = 0.86
collision_bounce = 0.27
collision_use_scale = true

[sub_resource type="SphereMesh" id="SphereMesh_irlaw"]

[node name="Baker" instance=ExtResource("1_rubn6")]
script = ExtResource("2_tddji")
character_stats = SubResource("Resource_cmdfg")

[node name="Physical Bone Hips" parent="NPC_Meat_Female2/Meat_Female/Skeleton3D" index="1"]
transform = Transform3D(0.68279, -0.707372, 0.181607, -0.00249519, -0.249629, -0.964018, 0.730457, 0.661258, -0.169658, -0.0222401, -0.211403, -0.518022)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00289786, -0.0018451, 0.1262)
body_offset = Transform3D(0.999885, -1.00136e-05, 8.27909e-05, -0.00240516, 4.44055e-06, -0.995538, 0.000666648, 0.999976, -3.57628e-07, 0.00288706, 0.12563, 0.00184703)

[node name="Physical Bone spine002" parent="NPC_Meat_Female2/Meat_Female/Skeleton3D" index="3"]
transform = Transform3D(0.951787, -0.287955, -0.00909559, 0.0158882, 0.0835099, -0.985136, 0.287849, 0.942963, 0.0843744, -0.0523358, 0.269411, -0.494954)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000929591, -0.00205095, 0.135459)
body_offset = Transform3D(0.994489, -0.00154501, 8.15094e-06, 3.04319e-05, 5.83977e-05, -0.988785, 0.000225127, 0.989479, -3.01376e-05, 0.000920195, 0.13394, 0.00203367)

[node name="Physical Bone shinL" parent="NPC_Meat_Female2/Meat_Female/Skeleton3D" index="14"]
transform = Transform3D(0.675029, 0.702583, -0.150004, 0.132851, 0.0809065, 0.970975, 0.716566, -0.674683, -0.0394723, 0.0895744, -1.32937, 0.0842763)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0010771, 0.00160815, 0.361561)
body_offset = Transform3D(0.993366, 0.00331733, -0.000612482, -6.38478e-05, 0.000875041, -0.983285, -0.0017781, 0.977422, 0.00067772, -0.000853837, 0.355516, -0.00181496)

[node name="CharacterAnimationTree" parent="." index="3"]
parameters/Movement/playback = SubResource("AnimationNodeStateMachinePlayback_xn1ov")

[node name="FrostingGun" type="Node3D" parent="." index="5"]
script = ExtResource("4_lmnxi")

[node name="Frosting" type="GPUParticles3D" parent="FrostingGun" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.450174, 1.13343, 0)
emitting = false
amount = 100
lifetime = 16.71
one_shot = true
explosiveness = 0.55
interpolate = false
process_material = SubResource("ParticleProcessMaterial_lckb1")
draw_pass_1 = SubResource("SphereMesh_irlaw")

[node name="FrostingTimer" type="Timer" parent="FrostingGun" index="1"]
wait_time = 3.0
one_shot = true

[node name="FrostingHitDetect" type="RayCast3D" parent="FrostingGun" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.33603, 0)
enabled = false
target_position = Vector3(0, 0, -1)
collision_mask = 2
debug_shape_custom_color = Color(0.137255, 0.117647, 1, 1)

[node name="HitDelayTimer" type="Timer" parent="FrostingGun" index="3"]
wait_time = 0.1
one_shot = true

[node name="ProjectileTimer" parent="Timers" index="0"]
wait_time = 10.0

[connection signal="timeout" from="FrostingGun/FrostingTimer" to="FrostingGun" method="cease_fire"]

[editable path="NPC_Meat_Female2"]
